--- a/proposal/galactic_measurements.tex
+++ b/proposal/galactic_measurements.tex
@@ -55,6 +55,6 @@ patterns, and measure the probability of finding a cloud at a certain distance
 along the large scale field.  This will measure the interaction of magnetic
 field and structure on the 100-1000 pc scale.
 
-
+\red{CMB foreground stuff goes here}
 
 
