--- a/proposal/merit.tex
+++ b/proposal/merit.tex
@@ -20,31 +20,14 @@ nearby galaxies, and in the Milky Way galaxy itself.
 
 \vspace{1mm}
 
-\noindent\textbf{Broader impacts:} Our proposed work will have
-significant impact on scientists in training, who will learn to use
-cutting-edge numerical tools at the largest possible scale and will develop
-critical skills in scientific software development and data analysis.
-We will involve undergraduate and graduate students at MSU and a
-postdoctoral researcher at FSU in our research efforts (with undergraduates recruited through
-MSU's Research Experience for Undergraduates program), including
-students from under-represented groups.  All of the tools developed as
-part of this work will be incorporated into widely used open-source
-software projects and all simulation and analysis data products will
-be made publicly available.  This will maximize the return on this
-investment by enabling the community to more easily build upon this
-work.  Scientific results from this program will be visualized by
-members of our collaboration, and will be disseminated to the public
-via our pre-existing collaborations with planetaria and museums, and
-via the Internet.  In addition, these visualizations will be used as
-part of outreach talks and ``Ask a Scientist'' events that involve
-members of this project.  The simulation data produced as a result of
-this project will be used in computational science courses at Michigan
-State, where it will be used to train students in scientific
-visualization and data analysis techniques.  Similarly, this data will
-be used at Florida State in undergraduate-level ``Hydrodynamics for
-astrophysics'' and ``Extragalactic astrophysics'' courses, and will
-use the results obtained in this project to incorporate active
-research into the education of undergraduate physics and astrophysics
-majors.  The resulting curricular materials will be made available to
-the public via the Internet.
-
+\noindent\textbf{Broader impacts:} Our proposed work will have significant
+impact on scientists in training, who will learn to use cutting-edge numerical
+tools at the largest possible scale and will develop critical skills in
+scientific software development and data analysis.  All of the tools developed
+as part of this work will be incorporated into widely used open-source software
+projects and all simulation and analysis data products will be made publicly
+available.  This will maximize the return on this investment by enabling the
+community to more easily build upon this work.  In addition, the result of these
+studies (and other astrophysics knowledge) are disseminated through ``Ask a
+Scientist,'' a public outreach event we hold at
+Tallahassee's monthly art festival. 
