--- a/proposal/motivation.tex
+++ b/proposal/motivation.tex
@@ -15,27 +15,31 @@ comparable to (or in equipartition with) other available energy
 sources, including heat, turbulence, cosmic rays, and radiation.
 Furthermore, even in situations where magnetic fields are dynamically
 irrelevant (such as the intergalactic plasma in clusters of galaxies),
-they are critical for processes such as thermal conduction and
-particle acceleration.  In some extremely diffuse plasmas, magnetic
-fields are the only mechanism that causes particles to behave as a
-fluid!  In addition, magnetic fields are a useful probe of
-astrophysical plasma physics, but are often challenging to use as an
-observational diagnostic due to fundamental uncertainties in
-measurements (e.g., the need to assume a coherence length to interpret
-Faraday rotation measure observations).
+they are critical for processes such as thermal conduction and particle
+acceleration.  Magnetic fields (and dust pinned to them) also give rise to the
+majority of the polarized microwave sky, which is an important contaminant for
+studies of the cosmic microwave background.  
 
-In the following sections, we describe what is known about magnetic
-fields in the universe, both observationally and theoretically, and
-highlight some of our gaps in understanding.  \textbf{In general, while
-magnetic fields have been measured in virtually all astrophysical
-regimes, and while there is a clear sequence of events -- galaxies
-form molecular clouds, which in turn are the sites of star formation
--- the ways in which magnetic fields tie galaxies to molecular clouds,
-and thus potentially affect star formation and the stellar initial
-mass function, are poorly understood theoretically.}
+%In some extremely diffuse plasmas, magnetic
+%fields are the only mechanism that causes particles to behave as a
+%fluid!  In addition, magnetic fields are a useful probe of
+%astrophysical plasma physics, but are often challenging to use as an
+%observational diagnostic due to fundamental uncertainties in
+%measurements (e.g., the need to assume a coherence length to interpret
+%Faraday rotation measure observations).
 
+%In the following sections, we describe what is known about magnetic
+%fields in the universe, both observationally and theoretically, and
+%highlight some of our gaps in understanding.  \textbf{In general, while
+%magnetic fields have been measured in virtually all astrophysical
+%regimes, and while there is a clear sequence of events -- galaxies
+%form molecular clouds, which in turn are the sites of star formation
+%-- the ways in which magnetic fields tie galaxies to molecular clouds,
+%and thus potentially affect star formation and the stellar initial
+%mass function, are poorly understood theoretically.}
+ 
 \vspace{-3mm}
-\subsection{The high-redshift universe and intergalactic medium}
+\subsection{The high-redshift universe}
 \label{sec:extragalactic}
 \vspace{-2mm}
 
@@ -57,18 +61,19 @@ frame.  The implications of this observation are that the environments
 of high-redshift ($z \sim 2-3$) galaxies were significantly
 magnetized, with the possibility that magnetic field strengths in
 galaxies at this epoch -- a few billion years after the Big Bang --
-are comparable to those seen in present-day galaxies.  This work
-broadly agrees with earlier observations of $z \sim 2-3$ radio
-galaxies \cite{1998A&A...329..809A}, which showed different
-rotation measures between the two radio lobes of the observed
-galaxies.  The most obvious interpretation of this difference is
-that it comes from the radio galaxy itself, and the inferred magnetic
-fields have strengths on the order of a few $\mu$G.
+are comparable to those seen in present-day galaxies.  
+%This work
+%broadly agrees with earlier observations of $z \sim 2-3$ radio
+%galaxies \cite{1998A&A...329..809A}, which showed different
+%rotation measures between the two radio lobes of the observed
+%galaxies.  The most obvious interpretation of this difference is
+%that it comes from the radio galaxy itself, and the inferred magnetic
+%fields have strengths on the order of a few $\mu$G.
 
 Beyond statistically detecting magnetic fields in high redshift
 galaxies, major progress has been made in mapping magnetic fields in
-individual cosmologically-distant galaxies. Recently, Mao et
-al. \citep{Mao17} have exploited the scenario where a background
+individual cosmologically-distant galaxies. Recently, 
+\citet{Mao17} have exploited the scenario where a background
 polarized source was lensed by a foreground galaxy at $z=0.439$ to
 detect an axisymmetric microgauss magnetic field in the lensing galaxy
 as seen $\sim 4.6$ billion years ago.  This is the highest redshift
@@ -83,52 +88,7 @@ timescale for creating strong, coherent magnetic fields in galaxies!
 % on the growth of large-scale galactic magnetic fields as a function of
 % redshift.
 
-
-In addition to existing in galaxies over a wide span of time, the
-presence of magnetic fields has been inferred on cosmological scales
-in the intergalactic medium.  At megaparsec scales,
-\cite{2010Sci...328...73N} show that the lack of measured GeV
-gamma-rays in the direction of TeV gamma-ray sources observed by the
-Fermi Large Area Telescope yields a \textit{lower bound} of B~$\geq 3
-\times 10^{-16}$~G, with the lower bound increasing as $\propto
-\lambda_B^{-1/2}$ if the magnetic field correlation length $\lambda_B$
-is significantly smaller than a megaparsec.  Different analyses of
-data from the same instrument by \cite{2011ApJ...733L..21D,
-2010MNRAS.406L..70T}, with varied assumptions, results in lower limits
-for the strength of large-scale magnetic fields in the low redshift
-intergalactic medium that range from $\geq 10^{-18}$ G to $\geq 5
-\times 10^{-15}$~G.  None of these observations provides direct
-measurements of the coherence lengths of the fields in question,
-though they are inferred to be on the order of megaparsecs or greater.
-Also, it should be noted that these are lower limits on the large-scale intergalactic
-magnetic field and not a direct measurement.  An upper limit can also be determined by using the
-cosmic microwave background (CMB) -- specifically, measurements of CMB
-temperature anisotropies and polarization put strong upper limits on a
-mean pre-recombination magnetic field strength $\simeq 10^{-9}$~G
-\cite{1997PhRvL..78.3610B,2012SSRv..166...37W,2013A&ARv..21...62D}.
-We note that the CMB-derived
-upper limit is more stringent than the limits
-coming from Big Bang Nucleosynthesis, where measurements of the ratios
-of primordial species (including H, D, and He), as well as the
-baryon-to-photon ration $\eta$, give a strong upper limit for
-primordial magnetic field strengths of $10^{-7}$~G.
-
-Intergalactic magnetic fields on smaller scales have also been
-observed.  Rotation measure observations of the intracluster medium
--- that is, the intergalactic plasma in clusters of galaxies -- show
-that it is threaded by magnetic fields that are on the order of
-$0.1-10$~$\mu$G (depending on cluster location)
-\cite{Carilli02,2005mpge.conf..231E, 2005A&A...434...67V}, with
-patches of much higher magnetization ($\sim 40$~$\mu$G) observed.
-Furthermore, ``cool core'' clusters tend to have stronger fields by a
-factor of roughly 2 than non-cool core clusters.  The same
-observations show that magnetic fields are not regularly ordered on
-cluster scales, but instead have coherence lengths that range from a
-few kpc to tens of kpc. It is very difficult to discern the volume
-filling fraction of magnetic fields in the intracluster medium due to
-the paucity of background sources that can be used to observe rotation
-measures -- however, essentially all background sources show some
-magnetization.
+%\input{IGM.tex}
 
 \vspace{-3mm}
 \subsection{Low-redshift galaxies}
@@ -170,6 +130,8 @@ strong constraints on simulations that model the relationship between
 molecular clouds and the galaxies that contain them. 
 
 %\begin{wrapfigure}{l}{0.5\textwidth}
+
+M
 %\begin{center}
 %\includegraphics[width=0.48\textwidth]{VanEck.png}
 %\end{center}
@@ -278,6 +240,23 @@ magnetic fields in the CGM \citep[see,
 e.g., Figure 7 in][]{2017ARA&A..55..111H}, but the detailed structure
 of the circumgalactic magnetic will require the Square Kilometer Array
 or one of its pathfinders as a probe \citep{2015aska.confE..41H}.
+
+\red{GET REFERENCES}
+One of the primary motivations for this study is the spatial distribution and
+correlations in the magnetic field, and the synchrotron and polarized dust
+emission that is dictated by these correlations.  These signals occupy different
+locations in the galaxy, with the polarized dust emission at relatively low
+galactic scale height and the synchrotron coming from higher, hotter gas.  Both
+of these signals are foregrounds for studies of the polarized cosmic microwave
+background, and will need to be properly understood if they are to be removed
+from the signal.  The relevant quantities to study are $E$ and $B$, which are
+rotationally invariant quantities related to the polarization intensity and
+direction, and their spectral amplitudes, $C_\ell^{EE}$ and $C_\ell^{BB}$.  It has been found 
+that these amplitudes scale as a powerlaw in the wavenumber, $\ell^\alpha$ where
+$\alpha=-2.43$, and the is roughly twice the power in $E$ than $B$.  This is
+intriguingly smooth over the high-latitude sky.  Preliminary studies \red{KIM}
+\red{AK} have shown promising results.  \red{the bit about the location of the
+synchrotron}
 
 \begin{figure}[t]
 \begin{center}
