--- a/proposal/objectives.tex
+++ b/proposal/objectives.tex
@@ -3,9 +3,7 @@
 \label{sec:objectives}
 \vspace{-3mm}
 
-The universe is threaded with magnetic fields that permeate
-galaxies, molecular clouds, and stars, and which connect these objects
-together in complex ways.  Observations show that galaxies at $z
+Observations show that galaxies at $z
 \simeq 2$ (one-third of the present age of the universe) have magnetic
 fields that are both organized on large scales and of comparable
 magnitude to what we see in the Milky Way today.  Organized, dynamically important magnetic fields are also
