--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -482,7 +482,29 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.430.1548H},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{Chummels2019,
+       author = {{Hummels}, Cameron B. and {Smith}, Britton D. and {Hopkins}, Philip F. and
+         {O'Shea}, Brian W. and {Silvia}, Devin W. and {Werk}, Jessica K. and
+         {Lehner}, Nicolas and {Wise}, John H. and {Collins}, David C. and
+         {Butsky}, Iryna S.},
+        title = "{The Impact of Enhanced Halo Resolution on the Simulated Circumgalactic Medium}",
+      journal = {\apj},
+     keywords = {cosmology: theory, galaxies: evolution, hydrodynamics, methods: numerical, quasars: absorption lines, Astrophysics - Astrophysics of Galaxies},
+         year = "2019",
+        month = "Sep",
+       volume = {882},
+       number = {2},
+          eid = {156},
+        pages = {156},
+          doi = {10.3847/1538-4357/ab378f},
+archivePrefix = {arXiv},
+       eprint = {1811.12410},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...882..156H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
+	
 @ARTICLE{2013MNRAS.432.1989S,
    author = {{Simpson}, C.~M. and {Bryan}, G.~L. and {Johnston}, K.~V. and 
 	{Smith}, B.~D. and {Mac Low}, M.-M. and {Sharma}, S. and {Tumlinson}, J.
@@ -9349,4 +9371,36 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2008MNRAS.385.1443S},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@inproceedings{Bordner12,
+ author = {Bordner, James and Norman, Michael L.},
+ title = {Enzo-P / Cello: Scalable Adaptive Mesh Refinement for Astrophysics and Cosmology},
+ booktitle = {Proceedings of the Extreme Scaling Workshop},
+ series = {BW-XSEDE '12},
+ year = {2012},
+ location = {Chicago, Illinois},
+ pages = {4:1--4:11},
+ articleno = {4},
+ numpages = {11},
+ url = {http://dl.acm.org/citation.cfm?id=2462077.2462081},
+ acmid = {2462081},
+ publisher = {University of Illinois at Urbana-Champaign},
+ address = {Champaign, IL, USA},
+} 
+@ARTICLE{Bordner18,
+       author = {{Bordner}, James and {Norman}, Michael L.},
+        title = "{Computational Cosmology and Astrophysics on Adaptive Meshes using Charm++}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Physics - Computational Physics},
+         year = "2018",
+        month = "Oct",
+          eid = {arXiv:1810.01319},
+        pages = {arXiv:1810.01319},
+archivePrefix = {arXiv},
+       eprint = {1810.01319},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018arXiv181001319B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
