--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -51,8 +51,11 @@
 \newcommand{\davedeletenew}[1]{} %the same as the other, but for the 2017 version.
 \newcommand{\daveadd}[1]{\red{#1}}
 \newcommand{\davenote}[1]{\green{{\tt #1}}}
+\def\enzoe{Enzo-E}
 \begin{document}
 
+%\input{text_jots.tex}
+\pagebreak
 %\tableofcontents
 \input{title.tex}
 
@@ -60,8 +63,10 @@
 
 %\input{misc_papers_from_dave.tex}
 
+
 % Section 1: overview and objectives
-\input{objectives.tex}
+%\input{objectives.tex}
+\input{objectives_2019.tex}
 
 % Section 2: scientific motivation
 \input{motivation.tex}
