--- a/proposal/significance.tex
+++ b/proposal/significance.tex
@@ -9,20 +9,20 @@ so lies in the difficulty of devising a consistent treatment of
 initial and boundary conditions, of including the necessary physics,
 and in interpreting observations.  The proposed project will model the
 origin and evolution of galactic magnetic fields, and their impact on
-star-forming molecular clouds, from cosmological initial conditions to
-the present day.  We will also create synthetic observations for JVLA,
-ALMA, and other telescopes, which will be crucial to interpretating
-existing and upcoming observations.  In addition, we will use these
-tools to explore the possibilities of future observations that will be
-made by the next generation of radio telescopes  (in particular, the ngVLA and SKA).  This work will
-result in a deep understanding of the connection between galaxies and
-molecular clouds, and of the magnetic fields that permeate these
-objects.  This project is innovative due to its connection of
-cosmological structure (i.e., galaxies and their environments) to
+the interstellar medium, from cosmological initial conditions to
+the present day.  We will also create synthetic observations 
+of synchrotron emission and dust polarization that will be invaluable for both future
+CMB missions  and understanding existing measurements.
+This work will
+result in a deeper understanding of the evolution and morphology of magnetic
+fields in galaxies.
+This project is innovative due to its connection of
+cosmological structure (i.e., galaxies and their environments) down to
 molecular clouds and the star formation that occurs therein, and the
 modeling of both of these classes of objects in a unified theoretical
-and numerical framework.  The understanding gained by doing this will
+and numerical framework.  
+The understanding gained by doing this will
 be transformative in terms of our ability to more accurately model
-star formation through cosmic time, and will directly connect to
+\red{star formation} through cosmic time, and will directly connect to
 current and future observations of magnetic fields in a range of
 astrophysical situations.
