--- a/proposal/title.tex
+++ b/proposal/title.tex
@@ -1,13 +1,12 @@
 
 \begin{center} 
 \begin{LARGE}
-Collaborative research: Connecting galaxy, molecular cloud, and star formation with magnetic fields
+Simulations of Galactic Magnetism.
 \end{LARGE}
 \end{center}
 
 \pagestyle{plain}
 \begin{center}
-\textbf{PI: Brian W. O'Shea} (Michigan State University),
-\textbf{Co-PI: David C. Collins} (Florida State University)
+\textbf{PI: David C. Collins} (Florida State University)
 \end{center}
 
